Add get_nodes(attr1, attr2) thput bench for Neo4j