@@ -51,6 +51,7 @@ thputThreads=1
 #benchNeighborAtypeThput=T
 #benchNhbrNodeThput=T
 #benchNodeThput=T
+#benchNodeNodeThput=T
 #benchTaoMixThput=T
 
 benchAssocRange=T
@@ -112,6 +113,29 @@ for JVM_HEAP in 6900; do
         x=$(cut -d' ' -f1 ${o} | awk '{ sum += $1 } END { print sum }')
         echo ${thputThreads} clients, $x aggregated queries/sec >> ${o}
         mv ${o} neo4j_throughput_get_nodes-tuned_${tuned}-${thputThreads}clients.txt
+      fi
+
+    if [[ -n "$benchNodeNodeThput" ]]; then
+        sleep 2 && sync && sudo sh -c 'echo 3 > /proc/sys/vm/drop_caches'
+        find /mnt2T/data/neo4j/${DATASET}/schema/index -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        find /mnt2T/data/neo4j/${DATASET}/ -name "*store.db*" -type f -exec dd if={} of=/dev/null bs=1M 2>/dev/null \;
+        java -verbose:gc -server -XX:+UseConcMarkSweepGC -Xmx${JVM_HEAP}m -cp ${classpath} \
+           edu.berkeley.cs.succinctgraph.neo4jbench.BenchNode \
+           node-node-throughput \
+           ${NEO4J_DIR}/${DATASET} \
+           ${QUERY_DIR}/node_warmup_${num_nodes}.txt \
+           ${QUERY_DIR}/node_query_${num_nodes}.txt \
+           ${HOME_DIR}/neo4j_${DATASET}_node_node_latency_jvm${JVM_HEAP}m_pagecache${PC}m.txt \
+           ${neo4j_warmup_node} \
+           ${neo4j_measure_node} \
+           ${thputThreads} \
+           ${tuned} \
+           ${pageCacheForNodes}
+
+        o=neo4j_throughput_get_nodes2.txt
+        x=$(cut -d' ' -f1 ${o} | awk '{ sum += $1 } END { print sum }')
+        echo ${thputThreads} clients, $x aggregated queries/sec >> ${o}
+        mv ${o} neo4j_throughput_get_nodes2-tuned_${tuned}-${thputThreads}clients.txt
       fi
 
     if [[ -n "$benchNode" ]]; then
